--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <label for="sgfSelect">Problem</label>
         <select id="sgfSelect" aria-label="Choose SGF file"></select>
         <button id="reloadBtn" type="button">Reload</button>
+        <button id="nextPuzzleBtn" type="button">Next Puzzle</button>
         <button id="changeModeBtn" type="button">Change Mode</button>
       </div>
       <canvas id="board" width="540" height="540" aria-label="Go board"></canvas>
