--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     </aside>
   </main>
 
+  <footer class="site-credit">
+    Puzzles provided by Reddit user <strong>M2U2</strong>.
+  </footer>
+
   <script src="app.js"></script>
 </body>
 </html>
