homepage credit added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <span class="mode-copy">Play both sides and submit to check the line.</span>
         </button>
       </div>
+      <p class="start-credit">Puzzles provided by Reddit user <strong>M2U2</strong>.</p>
     </div>
   </section>
 
