--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <label for="sgfSelect">Problem</label>
         <select id="sgfSelect" aria-label="Choose SGF file"></select>
         <button id="reloadBtn" type="button">Reload</button>
+        <button id="prevPuzzleBtn" type="button">Previous Puzzle</button>
         <button id="nextPuzzleBtn" type="button">Next Puzzle</button>
         <label class="confirm-toggle">
           <input id="confirmMoveToggle" type="checkbox">
