--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             Confirm moves
           </label>
           <label class="confirm-toggle">
+            <input id="coordinatesToggle" type="checkbox" checked>
+            Coordinates
+          </label>
+          <label class="confirm-toggle">
             <input id="shuffleNextToggle" type="checkbox">
             Shuffle next puzzle
           </label>
